<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="top"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:background="@drawable/background"
        android:gravity="top"
        android:orientation="vertical" >

        <Button
            android:id="@+id/geradorCPF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:onClick="geradorCPF"
            android:text="@string/gerador_cpf" />

        <Button
            android:id="@+id/geradorCNPJ"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="geradorCNPJ"
            android:text="@string/gerador_cnpj" />

        <Button
            android:id="@+id/validadorCPF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="validadorCPF"
            android:text="@string/validador_cpf" />

        <Button
            android:id="@+id/validadorCNPJ"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="validadorCNPJ"
            android:text="@string/validador_cnpj" />
    </LinearLayout>

</LinearLayout>