<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:background="@drawable/background"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/validar_cnpj"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/font_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCNPJTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/digitar_cnpj"
            android:textColor="@color/font_color" />

        <EditText
            android:id="@+id/txtDigitarCNPJ"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnValidar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="validarCNPJ"
            android:text="@string/btn_validar" />
    </LinearLayout>

</LinearLayout>